@@ -9,7 +9,6 @@ import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
 
@@ -143,8 +142,7 @@ public class ExtractImageScansController {
                                 .runCommandWithOutputHandling(command);
 
                 // Read the output photos in temp directory
-                List<Path> tempOutputFiles =
-                        Files.list(tempDir).sorted().collect(Collectors.toList());
+                List<Path> tempOutputFiles = Files.list(tempDir).sorted().toList();
                 for (Path tempOutputFile : tempOutputFiles) {
                     byte[] imageBytes = Files.readAllBytes(tempOutputFile);
                     processedImageBytes.add(imageBytes);
@@ -156,7 +154,7 @@ public class ExtractImageScansController {
             // Create zip file if multiple images
             if (processedImageBytes.size() > 1) {
                 String outputZipFilename =
-                        fileName.replaceFirst("[.][^.]+$", "") + "_processed.zip";
+                        fileName.replaceFirst(REPLACEFIRST, "") + "_processed.zip";
                 tempZipFile = Files.createTempFile("output_", ".zip");
 
                 try (ZipOutputStream zipOut =
@@ -165,7 +163,7 @@ public class ExtractImageScansController {
                     for (int i = 0; i < processedImageBytes.size(); i++) {
                         ZipEntry entry =
                                 new ZipEntry(
-                                        fileName.replaceFirst("[.][^.]+$", "")
+                                        fileName.replaceFirst(REPLACEFIRST, "")
                                                 + "_"
                                                 + (i + 1)
                                                 + ".png");
@@ -187,7 +185,7 @@ public class ExtractImageScansController {
                 byte[] imageBytes = processedImageBytes.get(0);
                 return WebResponseUtils.bytesToWebResponse(
                         imageBytes,
-                        fileName.replaceFirst("[.][^.]+$", "") + ".png",
+                        fileName.replaceFirst(REPLACEFIRST, "") + ".png",
                         MediaType.IMAGE_PNG);
             }
         } finally {
@@ -219,4 +217,6 @@ public class ExtractImageScansController {
                     });
         }
     }
+
+    private static final String REPLACEFIRST = "[.][^.]+$";
 }
